--- a/arch/arm64/configs/ulysse_defconfig
+++ b/arch/arm64/configs/ulysse_defconfig
@@ -29,6 +29,8 @@ CONFIG_HAVE_GENERIC_RCU_GUP=y
 CONFIG_ARCH_DMA_ADDR_T_64BIT=y
 CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_NEED_SG_DMA_LENGTH=y
+CONFIG_ARM64_DMA_USE_IOMMU=y
+CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
 CONFIG_SMP=y
 CONFIG_SWIOTLB=y
 CONFIG_IOMMU_HELPER=y
@@ -46,7 +48,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-ulysse"
+CONFIG_LOCALVERSION="-loki"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -184,6 +186,7 @@ CONFIG_MULTIUSER=y
 # CONFIG_SGETMASK_SYSCALL is not set
 CONFIG_SYSFS_SYSCALL=y
 # CONFIG_SYSCTL_SYSCALL is not set
+CONFIG_POSIX_TIMERS=y
 CONFIG_KALLSYMS=y
 CONFIG_KALLSYMS_ALL=y
 # CONFIG_KALLSYMS_ABSOLUTE_PERCPU is not set
@@ -236,6 +239,7 @@ CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_GENERIC_IDLE_POLL_SETUP=y
 CONFIG_ARCH_HAS_FORTIFY_SOURCE=y
+CONFIG_ARCH_HAS_SET_MEMORY=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
@@ -347,10 +351,10 @@ CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_CFQ=y
-# CONFIG_DEFAULT_BFQ is not set
+# CONFIG_DEFAULT_CFQ is not set
+CONFIG_DEFAULT_BFQ=y
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_IOSCHED="bfq"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -412,7 +416,6 @@ CONFIG_ARCH_MSM8917=y
 # CONFIG_PCI_DOMAINS is not set
 # CONFIG_PCI_DOMAINS_GENERIC is not set
 # CONFIG_PCI_SYSCALL is not set
-CONFIG_PCI_LABEL=y
 
 #
 # Kernel Features
@@ -503,8 +506,6 @@ CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_PROCESS_RECLAIM=y
 CONFIG_ARCH_SUPPORTS_SPECULATIVE_PAGE_FAULT=y
 CONFIG_SPECULATIVE_PAGE_FAULT=y
-CONFIG_ARM64_DMA_USE_IOMMU=y
-CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
 CONFIG_SECCOMP=y
 # CONFIG_PARAVIRT is not set
 # CONFIG_PARAVIRT_TIME_ACCOUNTING is not set
@@ -546,9 +547,7 @@ CONFIG_CMDLINE="androidboot.usbconfigfs=true ramoops_memreserve=4M"
 # CONFIG_CMDLINE_FROM_BOOTLOADER is not set
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
-CONFIG_EFI_STUB=y
-CONFIG_EFI=y
-CONFIG_DMI=y
+# CONFIG_EFI is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 CONFIG_IMG_GZ_DTB=y
 # CONFIG_IMG_DTB is not set
@@ -590,10 +589,10 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
-CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 CONFIG_CPU_PM=y
+CONFIG_ENERGY_MODEL=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 
@@ -1047,6 +1046,7 @@ CONFIG_NET_SCH_PRIO=y
 # CONFIG_NET_SCH_PIE is not set
 CONFIG_NET_SCH_INGRESS=y
 # CONFIG_NET_SCH_PLUG is not set
+# CONFIG_NET_SCH_DEFAULT is not set
 
 #
 # Classification
@@ -1769,19 +1769,19 @@ CONFIG_INPUT_JOYSTICK=y
 # CONFIG_JOYSTICK_XPAD is not set
 # CONFIG_INPUT_TABLET is not set
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v26=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v26=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v26 is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C_v26 is not set
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v26=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_v26=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v26=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v26 is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_v26 is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_PROXIMITY_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_ACTIVE_PEN_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_GESTURE_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_VIDEO_v26 is not set
-CONFIG_SECURE_TOUCH_SYNAPTICS_DSX_V26=y
+# CONFIG_SECURE_TOUCH_SYNAPTICS_DSX_V26 is not set
 CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
 # CONFIG_TOUCHSCREEN_AD7877 is not set
@@ -1795,15 +1795,6 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_CYTTSP_CORE is not set
 # CONFIG_TOUCHSCREEN_CYTTSP4_CORE is not set
 # CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5 is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_DEVICETREE_SUPPORT is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_I2C is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_SPI is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_MT_A is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_MT_B is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_BUTTON is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_PROXIMITY is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_DEVICE_ACCESS is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_DEVICE_ACCESS_API is not set
 # CONFIG_TOUCHSCREEN_DYNAPRO is not set
 # CONFIG_TOUCHSCREEN_HAMPSHIRE is not set
 # CONFIG_TOUCHSCREEN_EETI is not set
@@ -1849,10 +1840,6 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_FT5X06_GESTURE is not set
 # CONFIG_TOUCHSCREEN_ROHM_BU21023 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE is not set
 # CONFIG_TOUCHSCREEN_FTS is not set
 CONFIG_TOUCHSCREEN_FT5X06=y
 # CONFIG_TOUCHSCREEN_GEN_VKEYS is not set
@@ -2809,7 +2796,6 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 # Frame buffer hardware drivers
 #
 # CONFIG_FB_ARMCLCD is not set
-# CONFIG_FB_EFI is not set
 # CONFIG_FB_OPENCORES is not set
 # CONFIG_FB_S1D13XXX is not set
 # CONFIG_FB_SMSCUFX is not set
@@ -3564,7 +3550,6 @@ CONFIG_RTC_I2C_AND_SPI=y
 # CONFIG_RTC_DRV_DS1685_FAMILY is not set
 # CONFIG_RTC_DRV_DS1742 is not set
 # CONFIG_RTC_DRV_DS2404 is not set
-# CONFIG_RTC_DRV_EFI is not set
 # CONFIG_RTC_DRV_STK17TA8 is not set
 # CONFIG_RTC_DRV_M48T86 is not set
 # CONFIG_RTC_DRV_M48T35 is not set
@@ -4325,6 +4310,8 @@ CONFIG_STM=y
 # CONFIG_FPGA is not set
 CONFIG_SENSORS_SSC=y
 # CONFIG_TEE is not set
+CONFIG_PM_OPP=y
+# CONFIG_LEGACY_ENERGY_MODEL_DT is not set
 
 #
 # Firmware Drivers
@@ -4332,21 +4319,8 @@ CONFIG_SENSORS_SSC=y
 CONFIG_ARM_PSCI_FW=y
 # CONFIG_ARM_SCPI_PROTOCOL is not set
 # CONFIG_FIRMWARE_MEMMAP is not set
-CONFIG_DMIID=y
-# CONFIG_DMI_SYSFS is not set
 CONFIG_QCOM_SCM_64=y
 CONFIG_HAVE_ARM_SMCCC=y
-
-#
-# EFI (Extensible Firmware Interface) Support
-#
-# CONFIG_EFI_VARS is not set
-CONFIG_EFI_ESRT=y
-CONFIG_EFI_PARAMS_FROM_FDT=y
-CONFIG_EFI_RUNTIME_WRAPPERS=y
-CONFIG_EFI_ARMSTUB=y
-# CONFIG_EFI_CAPSULE_LOADER is not set
-# CONFIG_EFI_TEST is not set
 # CONFIG_MESON_SM is not set
 CONFIG_MSM_TZ_LOG=y
 
@@ -4446,7 +4420,6 @@ CONFIG_TMPFS_XATTR=y
 # CONFIG_HUGETLB_PAGE is not set
 CONFIG_ARCH_HAS_GIGANTIC_PAGE=y
 CONFIG_CONFIGFS_FS=y
-CONFIG_EFIVAR_FS=y
 CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ORANGEFS_FS is not set
 # CONFIG_ADFS_FS is not set
@@ -4826,6 +4799,7 @@ CONFIG_CRYPTO_RNG_DEFAULT=y
 CONFIG_CRYPTO_AKCIPHER2=y
 CONFIG_CRYPTO_AKCIPHER=y
 CONFIG_CRYPTO_KPP2=y
+CONFIG_CRYPTO_ACOMP2=y
 CONFIG_CRYPTO_RSA=y
 # CONFIG_CRYPTO_DH is not set
 # CONFIG_CRYPTO_ECDH is not set
@@ -4923,9 +4897,9 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 CONFIG_CRYPTO_DEFLATE=y
 CONFIG_CRYPTO_LZO=y
 # CONFIG_CRYPTO_842 is not set
-# CONFIG_CRYPTO_LZ4 is not set
+CONFIG_CRYPTO_LZ4=y
 # CONFIG_CRYPTO_LZ4HC is not set
-# CONFIG_CRYPTO_ZSTD is not set
+CONFIG_CRYPTO_ZSTD=y
 
 #
 # Random Number Generation
@@ -5001,6 +4975,7 @@ CONFIG_CRC32_SLICEBY8=y
 # CONFIG_CRC7 is not set
 CONFIG_LIBCRC32C=y
 # CONFIG_CRC8 is not set
+CONFIG_XXHASH=y
 CONFIG_AUDIT_GENERIC=y
 CONFIG_AUDIT_ARCH_COMPAT_GENERIC=y
 CONFIG_AUDIT_COMPAT_GENERIC=y
@@ -5009,6 +4984,10 @@ CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
+CONFIG_ZSTD_COMPRESS=y
+CONFIG_ZSTD_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
 CONFIG_DECOMPRESS_GZIP=y
@@ -5033,7 +5012,6 @@ CONFIG_CLZ_TAB=y
 CONFIG_MPILIB=y
 CONFIG_LIBFDT=y
 CONFIG_OID_REGISTRY=y
-CONFIG_UCS2_STRING=y
 # CONFIG_SG_SPLIT is not set
 CONFIG_SG_POOL=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
